# lldc

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  audit-log.json
include/lldc/: common.h  events.h  gateway.h  hashmap.h  parse.h  parsers.h  spooky.h  structure.h
schemas/: application.json  application.team.json  application.team.member.arr.json  application.team.member.json  auditlog.changes.json  auditlog.entries.json  auditlog.json  auditlog.options.json  channel.allowed_mentions.json  channel.arr.json  channel.attachment.arr.json  channel.attachment.json  channel.channel_mention.arr.json  channel.channel_mention.json  channel.embed.arr.json  channel.embed.author.json  channel.embed.field.arr.json  channel.embed.field.json  channel.embed.footer.json  channel.embed.image.json  channel.embed.json  channel.embed.provider.json  channel.embed.thumbnail.json  channel.embed.video.json  channel.emoji.arr.json  channel.followed_channel.json  channel.json  channel.message.activity.json  channel.message.interaction.json  channel.message.json  channel.message.reference.json  channel.overwrite.arr.json  channel.overwrite.json  channel.partial.arr.json  channel.partial.json  channel.reaction.arr.json  channel.reaction.json  channel.thread.member.json  channel.thread.metadata.json  emoji.json  (+64 more)
scripts/: gen_parser.js  schema_helper.js
src/: common.c  demo.c  events.c  gateway.c  hashmap.c  parse.c  parsers.c  spooky.c  structure.c
